Fix Gist side scrolling on small screens

--- a/_assets/stylesheets/_code.scss
+++ b/_assets/stylesheets/_code.scss
@@ -15,7 +15,6 @@ code {
   pre {
     background: #f8f8ff;
     padding: 0.5em;
-    overflow: auto;
     white-space: pre;
   }
 
